--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link  rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="videos/clear.mp4" type="video/mp4">
+      </video>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
